--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -15,21 +15,26 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link
-  rel="stylesheet"
-  href="https://unpkg.com/@ag-grid-community/core@27.3.0/dist/styles/ag-grid.css" />
+   
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
-
-<link
-  rel="stylesheet"
-  href="https://unpkg.com/@ag-grid-community/core@27.3.0/dist/styles/ag-theme-alpine.css" />
- 
-
 
 
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+
+<!-- aqui abaixo é teste -->
+
+<script
+      src="https://unpkg.com/react@latest/umd/react.development.js"
+      crossorigin="anonymous"
+    ></script>
+  
+    
+<!-- Fim do teste -->
+
+
+
 
 <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
 
